--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ var showHide = document.getElementById('myDIV');
       </center>
     <center>
       <h1 class="title-z" onclick="showHide()">Watch the video for a hint?</h1>
-    <iframe id="myDIV" width="560" height="315" style="border-radius: 20px;" src="https://www.youtube.com/embed/WEudyv1M_0o?si=j4Xr39-NYNKfSCbI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></center></iframe>
+    <iframe id="myDIV" width="560" height="315" style="border-radius: 20px;" src="https://youtube.com/shorts/o4POzBExUnk?si=bY0kdDa4PFad1T7-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></center></iframe>
     </div>
      <div class="lightbox-bg"></div>
      <div class="status confirm">
