--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ var showHide = document.getElementById('myDIV');
     <li><span class="target" data-accept="hippies">&nbsp;</span></li>
     <li><span class="target" data-accept="cocain">&nbsp;</span></li>
 	<li><span class="target" data-accept="and PCP.">&nbsp;</span></li>
-        <!-- <li><span class="target" data-accept="We can remember this menmonic because hackers like non-encrypted ports, and they often wear a mask that resembles a ghost.">&nbsp;</span></li> -->
+        <!-- <li><span class="target" data-accept="We can remember this menmonic because people often think of drugs, hippies and concerts like Woodstock when they think of the years 67 and 68. DHCP can stand for "DRUGS. HIPPIES. COCAIN. & PCP.">&nbsp;</span></li> -->
         </ol>
     </div>
       </center>
